css/04-gallery.css
/*---image gallery---*/
.Container-fluid .row {
Padding: 0 20%;
}

#row-gallery {
  padding: 0 0 10px 15px;
}

.row-image-button {
  padding: 0 0 10px 15px;
}
#image-button {
  padding: 0 0 15px 0px;
}

#right-button {
  float: right;

}
.btn-basic-right {
  align: right;
}

.row-gallery-1 .col-md-2 {
  width: 250px;
  height:250px;
}

.blank-img {
  margin-top: -120px;
  margin-left: 82px;
}
/* Gallery Banner */
.image-center {
  border: 1px solid white;
  margin-left: 400px;
}

.black-space-products {
  color: #222;
  height: 150px;
}

